# operating_system_rust

./: .gitignore  Cargo.toml  DEMO.sh  Makefile  PHASE2_GUIDE.md  PHASE2_SUMMARY.md  PROJECT_SUMMARY.md  README.md  VISUAL_GUIDE.md  test.sh  test_commands.txt  test_phase2.sh
.github/workflows/: build.yml
src/: allocator.rs  executor.rs  filesystem.rs  interrupts.rs  keyboard.rs  main.rs  process.rs  serial.rs  syscall.rs  vga_buffer.rs
