[package]
name = "operating_system_rust"
version = "0.1.0"
edition = "2021"
authors = ["AI Assistant"]

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.9.8"
uart_16550 = "0.2.0"
x86_64 = "0.14.10"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
